src/main/resources/Krakatau-master/tests/assembler/bad/badescapes2.j
.class public '\x3'
.super java/lang/Object
.end class